After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 702663 - GtkComboBox::appears-as-list does not respect scrolling
GtkComboBox::appears-as-list does not respect scrolling
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkComboBox
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-06-19 15:08 UTC by Peter Wu
Modified: 2013-11-20 12:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
`GDK_DEBUG=events oxygen-gtk3-demo` output (5.90 KB, text/plain)
2013-11-19 20:46 UTC, Peter Wu
  Details
combobox: Set GDK_SCROLL_MASK on the eventbox in appears-as-list mode (983 bytes, patch)
2013-11-20 11:55 UTC, Carlos Garnacho
committed Details | Review

Description Peter Wu 2013-06-19 15:08:16 UTC
Originally reported against the oxygen-gtk[1] project:
 Title: "Mouse wheel does not scroll text view"
 Short description: "When using GTK3 apps with the oxygen-gtk theme, scrolling with the mouse wheel does not have any effect. Besides a large text field, this also happens with a combobox. Initially reported at https://bugs.archlinux.org/task/35348 for gtk3."

 [1]: https://bugs.kde.org/show_bug.cgi?id=321284

For some reason, scrolling with the pointer put on tabbed things or a combobox does nothing, as if no action was performed at all. Using gtk2, there is no such bug. I consider this a regression, there is no mention of a related change on the GTK 2 -> 3 migration page[2].

 [2]: https://developer.gnome.org/gtk3/3.5/gtk-migrating-2-to-3.html

Affected gtk versions:
- 3.9.4-17-g159cccf (git)
- 3.8.2-1 (Arch Linux)
- 3.6.4 (git)
- 3.5.18 (git)
- 3.4.4 (git)
(older versions resulted in a build error which I did not investigate)
Comment 1 Carlos Garnacho 2013-11-19 19:16:10 UTC
The archlinux/kde bugs you mention first are related to bug #699574 in this bugzilla, which has been fixed recently on GTK+, but widgets not doing smooth scrolling should have remained unaffected all this time.

Notebooks changed somewhere in 3.x to stop using scroll events for tab switching, so scrolling is expected to not work on tabs. But comboboxes should have always worked, are you sure they didn't/don't? in case scrolling on comboboxes doesn't work, it'd be great if you could run an affected GTK+ app with GDK_DEBUG=events and attach the output here
Comment 2 Carlos Garnacho 2013-11-19 19:42:01 UTC
Another thing worth knowing, is scrolling on comboboxes denied when the menu is opened or closed? if it is the former it could be a duplicate of bug 694859
Comment 3 Peter Wu 2013-11-19 20:46:57 UTC
Created attachment 260275 [details]
`GDK_DEBUG=events oxygen-gtk3-demo` output

The bug is still present with 3.10.4-1. Using KDE 4.11.3-1 with oxygen-gtk3 1.2.0-1 (the oxygen-gtk3-demo application is also from this latter package).

See the attached GDK_DEBUG=events file.

Summary:

- Scrolling on ComboBoxes does not change the value.
- Scrolling on a text field does not change the position.
- Scrolling with the pointer above the scroll bars do change the position.
Comment 4 Carlos Garnacho 2013-11-20 11:52:12 UTC
(In reply to comment #3)
> Created an attachment (id=260275) [details]
> `GDK_DEBUG=events oxygen-gtk3-demo` output
> 
> The bug is still present with 3.10.4-1. Using KDE 4.11.3-1 with oxygen-gtk3
> 1.2.0-1 (the oxygen-gtk3-demo application is also from this latter package).
> 
> See the attached GDK_DEBUG=events file.
> 
> Summary:
> 
> - Scrolling on ComboBoxes does not change the value.

I see this if using the oxygen-gtk3 them, it boils down to the appears-as-list GtkComboBox style property, which oxygen-gtk turns on, I'm updating the bug accordingly, patch coming.


> - Scrolling on a text field does not change the position.
> - Scrolling with the pointer above the scroll bars do change the position.

Please let's keep this bug report focused, that has been already dealt with and fixed in bug #699574, the changes were pushed to the repo only a few days ago, so give it time so the changes get to your distro, or compile yourself with those patches.
Comment 5 Carlos Garnacho 2013-11-20 11:55:29 UTC
Created attachment 260293 [details] [review]
combobox: Set GDK_SCROLL_MASK on the eventbox in appears-as-list mode

This is so the scroll wheel works in both modes, and there's no behavioral
change depending on a style property.
Comment 6 Matthias Clasen 2013-11-20 12:11:28 UTC
Review of attachment 260293 [details] [review]:

ok
Comment 7 Matthias Clasen 2013-11-20 12:12:51 UTC
Review of attachment 260293 [details] [review]:

ok
Comment 8 Carlos Garnacho 2013-11-20 12:28:07 UTC
The patch is now on all >=3.8 branches