combobox: Set GDK_SCROLL_MASK on the eventbox in appears-as-list mode

This is so the scroll wheel works in both modes, and there's no behavioral
change depending on a style property.

https://bugzilla.gnome.org/show_bug.cgi?id=702663